# ITKSkeleton

./: README.md  Readme.md
src/: CMakeLists.txt  gtest-CMakeLists.txt  main.cxx  test_bunny.cxx
src/TopologicalNumberFunctions/: itkLineTerminalityImageFunction.txx  itkSimplicityByTopologicalNumbersImageFunction.txx  itkTopologicalNumberImageFunction.txx
